--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "main": "index.js",
    "scripts": {
-    "start": "node --trace-uncaught --trace-warnings src/index.js",
-    "dev": "nodemon dotenv/config --experimental-json-modules src/index.js"
+  "start": "node src/index.js",
+  "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
